--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <% flash.each do |key, value| %>
+      <div class="<%= flash_class(key) %> alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+        <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
